sdks/java: the direct path, and the JVM signal-handler evidence for not defaulting to it
Adds LlmuxDirect, an FFM (java.lang.foreign) binding over libllmux's C ABI,
alongside the existing sidecar. Both paths now have a runnable example and
run-examples.sh stands up everything they need — the shared library, the
gateway binary, and ffi/fakeupstream — so neither needs an API key.

The interesting part is tools/SignalHandlerProbe.java. The JVM is the host most
likely to collide with the Go runtime's signal handlers, so this measures it
instead of describing it: it reads every sigaction handler, loads libllmux,
reads them again, and then tries to provoke the JVM into using the ones that
changed. On OpenJDK 26.0.2 darwin/arm64 the Go runtime replaces SIGSEGV, SIGBUS,
SIGFPE, SIGPIPE and SIGURG, and adds SA_ONSTACK to SIGILL, SIGXFSZ and SIGUSR2
without replacing them. HotSpot agrees: -Xcheck:jni prints five "handler
modified" warnings and tells you to use libjsig.

Two results worth having in the record. SIGPROF is NOT touched — Go installs
only synchronous signals plus SIGPIPE and SIGURG in c-shared mode — so JVM
profiling is unaffected, and defensive code for it would be code written around
a problem that does not exist. And chaining works in both directions: the JVM
recovers implicit null checks and StackOverflowError after the library loads,
and a nil dereference inside Go, called from a Java thread, still comes back as
a Go panic.

So the direct path works and is still not the default. HotSpot reports its own
handlers as replaced, which forfeits a guarantee it makes about crash handling;
the supported fix, libjsig, is one line — on the java launch command, which a
library cannot add to a process that already started. The README says the
sidecar is the recommended default for Java and shows the measurements behind
it, including the confound that libjsig interposes the probe's own sigaction
calls, so under --jsig only HotSpot's audit is evidence.

pom.xml compiles the